=== HEAD

* Don't show many to many edit link for models without many to many associations (jeremyevans)

* Quailfy columns when searching, fixing issues when eager_graph is used on the model (jeremyevans)

=== 0.5.1 (2013-12-17)

* Show header with display name for current object on mtm edit page (jeremyevans)

* Handle empty values for many_to_one associations on new/edit forms (jeremyevans)

=== 0.5.0 (2013-12-13)

* Initial Public Release