@@ -40,9 +40,6 @@ describe AutoForme do
     select("Artist1")
     click_button "Edit"
 
-    select("albums")
-    click_button "Edit"
-
     find('h2').text.should == 'Edit Albums for Artist1'
     all('select')[0].all('option').map{|s| s.text}.should == ["Album1", "Album2", "Album3"]
     all('select')[1].all('option').map{|s| s.text}.should == []
@@ -80,9 +77,6 @@ describe AutoForme do
 
     visit("/Artist/mtm_edit")
     select("Artist1")
-    click_button "Edit"
-
-    select("albums")
     click_button "Edit"
 
     all('select')[0].all('option').map{|s| s.text}.should == []
@@ -225,9 +219,6 @@ describe AutoForme do
     select("Artist1")
     click_button "Edit"
 
-    select("albums")
-    click_button "Edit"
-
     all('select')[0].all('option').map{|s| s.text}.should == ["Album1", "Album2", "Album3"]
     all('select')[1].all('option').map{|s| s.text}.should == []
     select("Album1", :from=>"Associate With")
@@ -265,8 +256,6 @@ describe AutoForme do
     visit("/Artist/mtm_edit")
     select("Artist1")
     click_button "Edit"
-    select("albums")
-    click_button "Edit"
 
     all('select')[0].all('option').map{|s| s.text}.should == ["B1", "E1"]
     all('select')[1].all('option').map{|s| s.text}.should == []
@@ -291,16 +280,12 @@ describe AutoForme do
     visit('/Artist/mtm_edit')
     select("Artist1")
     click_button "Edit"
-    select("albums")
-    click_button "Edit"
     select("E1", :from=>"Associate With")
     Album.where(:name=>'E1').update(:name=>'Y1')
     proc{click_button "Update"}.should raise_error(Sequel::NoMatchingRow)
 
     visit('/Artist/mtm_edit')
     select("Artist1")
-    click_button "Edit"
-    select("albums")
     click_button "Edit"
     all('select')[0].all('option').map{|s| s.text}.should == []
     all('select')[1].all('option').map{|s| s.text}.should == []
@@ -326,9 +311,6 @@ describe AutoForme do
     select("Artist1")
     click_button "Edit"
 
-    select("albums")
-    click_button "Edit"
-
     check "Album12"
     click_button "Update"
     Artist.first.albums.map{|x| x.name}.should == %w'Album1'
@@ -342,5 +324,57 @@ describe AutoForme do
     check "Album12"
     check "Album2Album2"
     check "Album3Album3"
+  end
+end
+
+describe AutoForme do
+  before(:all) do
+    db_setup(:artists=>[[:name, :string]], :albums=>[[:name, :string]], :albums_artists=>[[:album_id, :integer, {:table=>:albums}], [:artist_id, :integer, {:table=>:artists}]])
+    model_setup(:Artist=>[:artists, [[:many_to_many, :albums]], [[:many_to_many, :other_albums, :clone=>:albums]]], :Album=>[:albums, [[:many_to_many, :artists]]])
+  end
+  after(:all) do
+    Object.send(:remove_const, :Album)
+    Object.send(:remove_const, :Artist)
+  end
+
+  it "should have basic many to many association editing working" do
+    app_setup do
+      model Artist do
+        mtm_associations [:albums, :other_albums]
+      end
+      model Album
+    end
+
+    Artist.create(:name=>'Artist1')
+    Album.create(:name=>'Album1')
+    Album.create(:name=>'Album2')
+    Album.create(:name=>'Album3')
+
+    visit("/Artist/mtm_edit")
+    page.find('title').text.should == 'Artist - Many To Many Edit'
+    select("Artist1")
+    click_button "Edit"
+
+    select('albums')
+    click_button "Edit"
+
+    find('h2').text.should == 'Edit Albums for Artist1'
+    all('select')[0].all('option').map{|s| s.text}.should == ["Album1", "Album2", "Album3"]
+    all('select')[1].all('option').map{|s| s.text}.should == []
+    select("Album1", :from=>"Associate With")
+    click_button "Update"
+    page.html.should =~ /Updated albums association for Artist/
+    Artist.first.albums.map{|x| x.name}.should == %w'Album1'
+
+    all('select')[0].all('option').map{|s| s.text}.should == ["Album2", "Album3"]
+    all('select')[1].all('option').map{|s| s.text}.should == ["Album1"]
+    select("Album2", :from=>"Associate With")
+    select("Album3", :from=>"Associate With")
+    select("Album1", :from=>"Disassociate From")
+    click_button "Update"
+    Artist.first.refresh.albums.map{|x| x.name}.should == %w'Album2 Album3'
+
+    all('select')[0].all('option').map{|s| s.text}.should == ["Album1"]
+    all('select')[1].all('option').map{|s| s.text}.should == ["Album2", "Album3"]
   end
 end
