@@ -1,5 +1,7 @@
 === HEAD
 
+* Don't force user to pick many to many association to edit if only one choice is available (jeremyevans)
+
 * Don't show many to many edit link for models without many to many associations (jeremyevans)
 
 * Quailfy columns when searching, fixing issues when eager_graph is used on the model (jeremyevans)
